[package]
name = "vtun-ng"
version = "3.0.21"
edition = "2021"

[[bin]]
name = "vtunngd"
path = "src/main.rs"

[dependencies]
libc = "0.2"
md5 = "0.8.0"
blowfish = "0.9.1"
ecb = "0.1.2"
cipher = "0.4.4"
rust-lzo = "0.6.2"
flate2 = "1.1.2"
signal-hook = "0.3.18"
time = { version = "0.3.41", features = ["macros", "formatting"] }
errno = "0.3.13"
dns-lookup = "2.0.4"
logos = "0.15.0"
proctitle = "0.1.1"
getopts = "0.2.23"
rand = "0.9.2"
aes = "0.8.4"
cbc = "0.1.2"
cfb-mode = "0.8.2"
ofb = "0.6.1"
getrandom = "0.3.3"
sha2 = "0.10.9"
users = "0.11.0"
aes-gcm = "0.10.3"
