[package]
name = "vtun_linkfd"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = "0.2"
openssl = "0.10"
once_cell = "1.21.3"  # Modern OpenSSL bindings
md5 = "0.8.0"
blowfish = "0.9.1"
ecb = "0.1.2"
cipher = "0.4.4"
rust-lzo = "0.6.2"
flate2 = "1.1.2"
