dnl
dnl  TUN - Universal TUN/TAP device driver.
dnl  Copyright (C) 1999-2000 Maxim Krasnyansky <max_mk@yahoo.com>
dnl
dnl  This program is free software; you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; either version 2 of the License, or
dnl  (at your option) any later version.
dnl
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
dnl  GNU General Public License for more details.
dnl
dnl  $Id$
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT()

AC_SUBST(DRV_DIR)

AC_ARG_ENABLE(debug,
   --enable-debug        Enable debuging,
   AC_DEFINE(TUN_DEBUG, 1)
)

AC_PROG_INSTALL
AC_PROG_CC

case `uname -m` in
sun4u)
	DRV_DIR="/usr/kernel/drv/sparcv9"
	ARCH='v9'
	;;
ia64)
	DRV_DIR="/usr/kernel/drv/ia64"
	ARCH='ia64'
	;;
*)
	DRV_DIR="/usr/kernel/drv"
	ARCH='v8'
	;;
esac      

if test "$GCC" = "yes"; then
	CFLAGS="-O2 -Wall"
else
	CFLAGS="-xarch=$ARCH -xcode=abs32 -xregs=no%appl -xO3"
fi

AC_DEFINE_UNQUOTED(TUN_VER, "$TUN_VER")

AC_OUTPUT(Makefile)
